finalised / corrected page responsive overflow scroll window / also implemented prevent parent scroll

--- a/src/styles/scss/page.scss
+++ b/src/styles/scss/page.scss
@@ -5,6 +5,7 @@
   margin-bottom: 50px;
   //
   overflow: scroll;
+  display: flex;
 }
 
 .container {
